--- a/tesekkur.html
+++ b/tesekkur.html
@@ -2,80 +2,126 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
+  <meta http-equiv="refresh" content="4;url=https://hyyazilim.github.io/basvuruformu.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Teşekkürler - HY Yazılım</title>
   <style>
     :root {
-      --accent: #00bcd4;
       --bg-color: #e0f7fa;
-      --text-color: #000;
+      --text-color: #006064;
       --card-bg: #ffffff;
+      --accent: #00bcd4;
     }
-
+    [data-theme="dark"] {
+      --bg-color: #121212;
+      --text-color: #00e5ff;
+      --card-bg: #1e1e1e;
+      --accent: #00e5ff;
+    }
+    * {
+      margin: 0; padding: 0; box-sizing: border-box;
+      font-family: "Segoe UI", sans-serif;
+    }
     body {
-      margin: 0;
-      padding: 0;
-      background: var(--bg-color);
-      font-family: 'Segoe UI', sans-serif;
+      background-color: var(--bg-color);
+      color: var(--text-color);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      padding: 1rem;
+      transition: all 0.4s ease;
+    }
+    header {
+      background: var(--accent);
+      width: 100%;
+      padding: 1.5rem 0;
+      text-align: center;
+      color: white;
+      font-size: 2rem;
+      font-weight: bold;
+      border-radius: 15px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.15);
+      margin-bottom: 2rem;
+    }
+    .message-box {
+      background: var(--card-bg);
+      padding: 2rem 3rem;
+      border-radius: 20px;
+      box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+      text-align: center;
+      max-width: 400px;
+      animation: fadeIn 0.8s ease forwards;
+    }
+    .message-box p {
+      font-size: 1.4rem;
+      margin-bottom: 1rem;
+    }
+    .message-box a {
+      color: var(--accent);
+      font-weight: bold;
+      text-decoration: none;
+      display: inline-block;
+      margin-top: 1rem;
+      font-size: 1.1rem;
+    }
+    .message-box a:hover {
+      text-decoration: underline;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    .dark-toggle {
+      position: fixed;
+      top: 1rem;
+      right: 1rem;
+      background: var(--card-bg);
+      border: none;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      cursor: pointer;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+      font-size: 1.5rem;
+      color: var(--accent);
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-    }
-
-    .card {
-      background: var(--card-bg);
-      padding: 3rem;
-      border-radius: 20px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.15);
-      text-align: center;
-      animation: fadeIn 1s ease forwards;
-    }
-
-    .card h1 {
-      font-size: 2.5rem;
-      color: var(--accent);
-      margin-bottom: 1rem;
-    }
-
-    .card p {
-      font-size: 1.1rem;
-      color: var(--text-color);
-      margin-bottom: 2rem;
-    }
-
-    .card a {
-      display: inline-block;
-      text-decoration: none;
-      background: var(--accent);
-      color: white;
-      padding: 0.8rem 2rem;
-      border-radius: 10px;
       transition: background 0.3s ease;
-      font-weight: bold;
     }
-
-    .card a:hover {
-      background: #0097a7;
-    }
-
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: scale(0.95);
-      }
-      to {
-        opacity: 1;
-        transform: scale(1);
-      }
+    .dark-toggle:hover {
+      background: var(--accent);
+      color: var(--card-bg);
     }
   </style>
 </head>
 <body>
-  <div class="card">
-    <h1>Teşekkürler!</h1>
-    <p>Formunuz başarıyla gönderildi. HY Yazılım en kısa sürede sizinle iletişime geçecek.</p>
-    <a href="index.html">Anasayfaya Dön</a>
-  </div>
+  <button class="dark-toggle" aria-label="Tema değiştir" title="Tema değiştir" onclick="toggleTheme()">🌓</button>
+  <header>HY Yazılım</header>
+  <main class="message-box">
+    <p>Teşekkürler! Başvurunuz başarıyla gönderildi.</p>
+    <p>Yönlendiriliyorsunuz...</p>
+    <a href="https://hyyazilim.github.io/basvuruformu.html">Eğer otomatik yönlendirme olmazsa buraya tıklayın.</a>
+  </main>
+
+  <script>
+    function toggleTheme() {
+      const html = document.documentElement;
+      if(html.getAttribute('data-theme') === 'dark') {
+        html.removeAttribute('data-theme');
+        localStorage.setItem('theme', 'light');
+      } else {
+        html.setAttribute('data-theme', 'dark');
+        localStorage.setItem('theme', 'dark');
+      }
+    }
+    window.onload = () => {
+      if(localStorage.getItem('theme') === 'dark') {
+        document.documentElement.setAttribute('data-theme', 'dark');
+      }
+    };
+  </script>
 </body>
 </html>
